Rewrote deprecated hibernate queries
Updates #16